fixed spacing

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ h1 span {
 
 h3 span {
     font-size: 3rem;
-    padding-bottom: 10px;
 }
 
 
@@ -70,10 +69,11 @@ h3 span {
 h2 {
     font-family: 'terminal-grotesque2';
     font-size: 5rem;
-    padding: 3rem 0 2rem 0;
+    padding: 2rem 0 2rem 0;
     border-top: solid #100E0E 5px;
     border-bottom: solid #100E0E 5px;
     line-height: 5rem;
+    margin-bottom: .17rem;
 }
 
 h3 {
